# simple_arbitrage_bot

./: .env  Cargo.toml  README.md
src/: bot.rs  exchange.rs  main.rs
src/exchange/: aevo.rs  dydx.rs
